--- a/layouts/HomePage/ContactSection/ContactSection.module.css
+++ b/layouts/HomePage/ContactSection/ContactSection.module.css
@@ -20,4 +20,89 @@
 
 .content {
     min-height: 85vh;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.linkList {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.link {
+    width: 20rem;
+
+    padding: 1rem;
+
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    border: solid 0.25rem var(--highlight-color);
+    border-radius: 1rem;
+
+    color: var(--highlight-color);
+
+    transition: color 0.3s, background-color 0.3s;
+}
+
+.link:hover {
+    color: var(--background-color);
+    background-color: var(--highlight-color);
+}
+
+.linkIcon {
+    flex: 1;
+    font-size: 4rem;
+}
+
+.linkNameContainer {
+    flex: 2;
+
+    display: flex;
+}
+
+.linkName {
+    position: relative;
+
+    font-size: 2rem;
+}
+
+.linkName::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    width: 100%;
+    height: 0.25rem;
+
+    content: '';
+
+    background-color: var(--background-color);
+
+    transform: scaleX(0);
+    transform-origin: left;
+
+    transition: transform 0.3s;
+}
+
+.link:hover .linkName::after {
+    transform: scaleX(1);
+}
+
+@media (max-width: 700px) {
+    .link {
+        color: var(--background-color);
+        background-color: var(--highlight-color);
+    }
+
+    .linkName::after {
+        transform: scaleX(1);
+    }
 }
