--- a/components/ThemeToggle/ThemeToggle.module.css
+++ b/components/ThemeToggle/ThemeToggle.module.css
@@ -5,16 +5,16 @@
 
     cursor: pointer;
 
-    border: solid 0.2rem var(--highlight-color);
+    border: solid 0.2rem var(--highlight);
     border-radius: 0.5rem;
 
-    color: var(--highlight-color);
-    background-color: var(--background-color);
+    color: var(--highlight);
+    background-color: var(--background);
 
     transition: color 0.3s, background 0.3s;
 }
 
 .button:hover {
-    color: var(--background-color);
-    background-color: var(--highlight-color);
+    color: var(--background);
+    background-color: var(--highlight);
 }
