--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,13 @@
+:root {
+    --light-color: #3c3836;
+    --light-highlight: #d65d0e;
+    --light-background: #f2e5bc;
+
+    --dark-color: #ebdbb2;
+    --dark-highlight: #d65d0e;
+    --dark-background: #32302f;
+}
+
 *,
 *::before,
 *::after {
@@ -13,8 +23,6 @@ html,
 body {
     height: 100%;
 
-    scroll-behavior: smooth;
-
     font-family: 'Roboto Mono', monospace;
     font-size: 16px;
     line-height: 1.5;
@@ -26,33 +34,31 @@ html:focus-within {
     scroll-behavior: smooth;
 }
 
-body {
-    min-height: 100vh;
+#__next {
+    height: 100%;
 
-    --light-color: #3c3836;
-    --light-highlight-color: #d65d0e;
-    --light-background-color: #f2e5bc;
-
-    --dark-color: #ebdbb2;
-    --dark-highlight-color: #d65d0e;
-    --dark-background-color: #32302f;
-
-    color: var(--color);
-    background-color: var(--background-color);
-
-    transition: color 0.3s, background 0.3s;
+    isolation: isolate;
 }
 
 body[data-theme='light'] {
     --color: var(--light-color);
-    --highlight-color: var(--light-highlight-color);
-    --background-color: var(--light-background-color);
+    --highlight: var(--light-highlight);
+    --background: var(--light-background);
 }
 
 body[data-theme='dark'] {
     --color: var(--dark-color);
-    --highlight-color: var(--dark-highlight-color);
-    --background-color: var(--dark-background-color);
+    --highlight: var(--dark-highlight);
+    --background: var(--dark-background);
+}
+
+body {
+    min-height: 100vh;
+
+    color: var(--color);
+    background-color: var(--background);
+
+    transition: color 0.3s, background 0.3s;
 }
 
 img,
@@ -106,19 +112,11 @@ p {
 a {
     font-size: 1rem;
     text-decoration: none;
-
-    color: var(--color);
 }
 
 ::selection {
     color: var(--background-color);
     background-color: var(--color);
-}
-
-#__next {
-    height: 100%;
-
-    isolation: isolate;
 }
 
 @media (prefers-reduced-motion: reduce) {
