Fix selection background color

--- a/styles/global.css
+++ b/styles/global.css
@@ -115,7 +115,7 @@ a {
 }
 
 ::selection {
-    color: var(--background-color);
+    color: var(--background);
     background-color: var(--color);
 }
 
