--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -4,7 +4,6 @@
     min-height: 80vh;
 
     display: flex;
-    flex-wrap: wrap;
 
     overflow: hidden;
 
@@ -12,12 +11,20 @@
     border-radius: 1rem;
 }
 
-.temp {
+.imageContainer {
+    position: relative;
+
     flex: 1;
+
+    margin: 1rem;
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.image {
+    border-radius: 1rem;
 }
 
 .projectInfo {
@@ -27,6 +34,7 @@
 
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .header {
@@ -187,4 +195,10 @@
 
     display: flex;
     align-items: center;
+}
+
+@media (max-width: 750px) {
+    .card {
+        flex-direction: column;
+    }
 }
