--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -39,6 +39,38 @@
     align-items: center;
 }
 
+.pathLink {
+    position: relative;
+
+    margin-right: auto;
+
+    font-size: 2rem;
+
+    color: var(--highlight);
+}
+
+.pathLink::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 0.2rem;
+
+    content: '';
+
+    background-color: var(--highlight);
+
+    transform: scaleX(0);
+    transform-origin: left;
+
+    transition: transform 0.3s;
+}
+
+.pathLink:hover::after {
+    transform: scaleX(1);
+}
+
 .linkList {
     display: flex;
     justify-content: center;
@@ -76,7 +108,12 @@
 }
 
 @media (max-width: 700px) {
+    .pathLink {
+        margin: auto;
+    }
+
     .linkNav {
+        flex-direction: column;
         justify-content: center;
     }
 
