--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -12,7 +12,7 @@
     height: 10vh;
 
     font-size: 3.5rem;
-    line-height: 3.75rem;
+    line-height: 8vh;
     text-align: center;
 
     border: solid 0.2rem var(--highlight);
@@ -106,6 +106,11 @@
 }
 
 @media (max-width: 700px) {
+    .logoLink {
+        font-size: 3rem;
+        line-height: 8vh;
+    }
+
     .pathLink {
         margin: auto;
     }
