--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -4,11 +4,6 @@
     min-height: 60vh;
 
     display: flex;
-
-    overflow: hidden;
-
-    border: solid 0.2rem var(--color);
-    border-radius: 1rem;
 }
 
 .imageContainer {
@@ -16,7 +11,7 @@
 
     flex: 1;
 
-    margin: 1rem;
+    padding: 1rem;
 
     display: flex;
     justify-content: center;
@@ -35,6 +30,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    border-radius: 1rem;
 }
 
 .header {
