--- a/styles/AboutPage.module.css
+++ b/styles/AboutPage.module.css
@@ -20,12 +20,17 @@
 .main {
     height: 85vh;
 
-    padding: 10vh 0 0 0;
+    padding: 5vh 0 0 0;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    gap: 1rem;
+}
+
+.text {
+    width: 60vw;
 }
 
 .footer {
@@ -34,4 +39,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.copyright {
+    font-size: 0.75rem;
 }
