Add navbar to footer on about page

--- a/styles/AboutPage.module.css
+++ b/styles/AboutPage.module.css
@@ -18,7 +18,7 @@
 }
 
 .main {
-    height: 85vh;
+    height: 80vh;
 
     padding: 5vh 0 0 0;
 
@@ -34,11 +34,50 @@
 }
 
 .footer {
-    height: 5vh;
+    height: 10vh;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.navLink {
+    position: relative;
+
+    text-decoration: none;
+    font-size: 1.2rem;
+
+    color: var(--color);
+}
+
+.navLink::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 0.2rem;
+
+    content: '';
+
+    background-color: var(--color);
+
+    transform: scaleX(0);
+    transform-origin: left;
+
+    transition: transform 0.3s;
+}
+
+.navLink:hover::after {
+    transform: scaleX(1);
 }
 
 .copyright {
