--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,7 @@
 
 html,
 body {
+    width: 100%;
     height: 100%;
 
     font-family: 'Roboto Mono', monospace;
@@ -35,6 +36,7 @@ html:focus-within {
 }
 
 #__next {
+    width: 100%;
     height: 100%;
 
     isolation: isolate;
