--- a/src/styles/ContactPage.module.css
+++ b/src/styles/ContactPage.module.css
@@ -1,28 +1,17 @@
-
 .page {
     display: flex;
     flex-direction: column;
 }
 
 .main {
-    height: 85vh;
+    height: 80vh;
 
-    padding: 10vh 0 0 0;
+    padding: 5vh 0 0 0;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    gap: 1rem;
 }
 
-.footer {
-    height: 5vh;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.copyright {
-    font-size: 0.75rem;
-}
