--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-    height: 45vh;
+    height: 50vh;
 
     display: flex;
     flex-direction: column;
@@ -18,16 +18,15 @@
 }
 
 .description {
-    width: 50vw;
+    width: 60vw;
 
     font-size: 1.5rem;
-    text-align: center;
 }
 
 .main {
     height: 50vh;
 
-    padding: 10vh 0 0 0;
+    padding: 2rem 0 0 0;
 
     display: flex;
     flex-direction: column;
@@ -71,16 +70,4 @@
 
 .link:hover::after {
     transform: scaleX(1);
-}
-
-.footer {
-    height: 5vh;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.copyright {
-    font-size: 0.75rem;
 }
