--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,12 +1,13 @@
 
 .header {
-    height: 10vh;
+    min-height: 10svh;
 
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
 .title {
-    font-size: 2.5rem;
+    font-size: 4rem;
 }
