--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -1,42 +1,38 @@
 .page {
+    width: 100svw;
+    height: 100svh;
+
     display: flex;
     flex-direction: column;
 }
 
-.header {
-    height: 50vh;
+.main {
+    flex: 1;
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
 }
 
 .title {
-    font-size: 3.5rem;
+    text-align: center;
+
+    font-size: 4rem;
 }
 
 .description {
-    width: 60vw;
+    width: 60svw;
 
     text-align: center;
+
     font-size: 1.5rem;
-}
-
-.main {
-    height: 50vh;
-
-    padding: 2rem 0 0 0;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
 }
 
 .nav {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 2rem;
@@ -45,10 +41,21 @@
 .link {
     position: relative;
 
-    text-decoration: none;
+    outline: none;
+
     font-size: 2rem;
 
     color: var(--color);
+
+    transition: color 0.3s;
+}
+
+.link::selection {
+    background-color: var(--highlight);
+}
+
+.link:is(:hover, :focus-visible) {
+    color: var(--highlight);
 }
 
 .link::after {
@@ -66,9 +73,11 @@
     transform: scaleX(0);
     transform-origin: left;
 
-    transition: transform 0.3s;
+    transition: transform 0.3s, color 0.3s;
 }
 
-.link:hover::after {
+.link:is(:hover, :focus-visible)::after {
     transform: scaleX(1);
+
+    background-color: var(--highlight);
 }
