--- a/src/styles/ProjectsPage.module.css
+++ b/src/styles/ProjectsPage.module.css
@@ -1,17 +1,79 @@
 .page {
+    width: 100svw;
+    min-height: 100svh;
+
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
-    height: 80vh;
+    flex: 1;
 
-    padding: 5vh 0 0 0;
+    width: 60svw;
+
+    padding-top: 5svh;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    gap: 1rem;
+    align-items: flex-start;
+    gap: 2rem;
 }
+
+.list {
+    padding-left: 1.2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+
+    list-style-type: square;
+}
+
+.listItem::marker {
+    font-size: 1.2rem;
+}
+
+.text {
+    font-size: 1.2rem;
+}
+
+.link {
+    position: relative;
+
+    outline: none;
+
+    font-size: 1.2rem;
+
+    color: var(--highlight);
+
+    transition: color 0.3s;
+}
+
+.link::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 0.2rem;
+
+    content: '';
+
+    background-color: var(--highlight);
+
+    transform: scaleX(0);
+    transform-origin: left;
+
+    transition: transform 0.3s;
+}
+
+.link:is(:hover, :focus-visible)::after {
+    transform: scaleX(1);
+}
+
 
