--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -35,6 +35,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 2rem;
 }
 
@@ -80,4 +81,32 @@
     transform: scaleX(1);
 
     background-color: var(--highlight);
+}
+
+@media (max-width: 800px) {
+    .title {
+        font-size: 3rem;
+    }
+
+    .description {
+        width: 80svw;
+
+        font-size: 1rem;
+    }
+
+    .nav {
+        flex-direction: column;
+    }
+
+    .link {
+        color: var(--highlight);
+    }
+
+    .link::after {
+        height: 0.1rem;
+
+        transform: scaleX(1);
+
+        background-color: var(--highlight);
+    }
 }
