--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -10,6 +10,7 @@
 
 .nav {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -38,7 +39,7 @@
     left: 0;
 
     width: 100%;
-    height: 0.2rem;
+    height: 3px;
 
     content: '';
 
