--- a/src/styles/AboutPage.module.css
+++ b/src/styles/AboutPage.module.css
@@ -64,7 +64,7 @@
     left: 0;
 
     width: 100%;
-    height: 0.2rem;
+    height: 3px;
 
     content: '';
 
@@ -94,8 +94,6 @@
     }
 
     .link::after {
-        height: 0.1rem;
-
         transform: scaleX(1);
 
         background-color: var(--highlight);
