style: adjust general line height and gap

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,11 +1,13 @@
 .footer {
     min-height: 10svh;
 
+    padding: 1rem;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .nav {
@@ -21,6 +23,8 @@
     position: relative;
 
     outline: none;
+
+    line-height: 1;
 
     font-size: 1.5rem;
 
@@ -59,7 +63,9 @@
 }
 
 .copyright {
-    font-size: 0.8rem;
+    line-height: 1;
+
+    font-size: 0.75rem;
 }
 
 @media (max-width: 800px) {
