--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,6 +2,8 @@
 .header {
     min-height: 10svh;
 
+    padding: 1rem;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -9,7 +11,7 @@
 }
 
 .title {
-    font-size: 4rem;
+    text-align: center;
 }
 
 @media (max-width: 800px) {
