--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,11 @@
 :root {
-    --light-color: #000000;
+    --light-color: #222222;
     --light-highlight: #d65d0e;
-    --light-background: #ffffff;
+    --light-background: #f2f2f2;
 
-    --dark-color: #ffffff;
+    --dark-color: #f2f2f2;
     --dark-highlight: #d65d0e;
-    --dark-background: #000000;
+    --dark-background: #222222;
 
     --color: var(--light-color);
     --highlight: var(--light-highlight);
@@ -28,3 +28,8 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    line-height: 1;
+
+    font-size: 4rem;
+}
