refactor: layout and configure project structure
- /app - for routing, pages, layouts, and error-handling
- /components - for components and component styles
- /styles - for page and layout styles

adjusted import paths for components and styles as well

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,6 +89,11 @@ body {
 }
 
 body {
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(
             to bottom,
