--- a/src/styles/main/page-home.module.css
+++ b/src/styles/main/page-home.module.css
@@ -1,11 +1,13 @@
-.main {
+.section {
+    flex: 1;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
 }
 
-.header {
+.title {
     font-size: 4rem;
+    text-align: center;
 }
