--- a/src/components/main/header/header.module.css
+++ b/src/components/main/header/header.module.css
@@ -1,11 +1,11 @@
 .header {
-    min-height: 10vh;
+    max-height: 10vh;
 
     padding: 1rem;
 
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
