--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -26,7 +26,7 @@ html:focus-within {
 }
 
 body {
-    min-height: 100svh;
+    min-height: 100vh;
 
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji";
