--- a/src/components/main/header/header.module.css
+++ b/src/components/main/header/header.module.css
@@ -5,7 +5,34 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerLeft {
+    min-width: 5vw;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+.headerMiddle {
+    flex: 1;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerRight {
+    min-width: 5vw;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
     align-items: center;
 }
 
