--- a/src/components/main/headerNav/headerNav.module.css
+++ b/src/components/main/headerNav/headerNav.module.css
@@ -1,29 +1,31 @@
 .nav {
+    flex: 1;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.linkList {
+.navList {
+    flex: 1;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
 
     list-style: none;
 }
 
-.linkItem {
+.navItem {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .link {
-    padding: 0.5rem;
-
     font-size: 1rem;
 
     text-align: center;
