--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,29 +1,3 @@
-:root {
-    --light-fg: #181825;
-    --light-bg: #e6e9ef;
-
-    --dark-fg: #e6e9ef;
-    --dark-bg: #181825;
-
-    --fg: var(--light-fg);
-    --bg: var(--light-bg);
-}
-
-body {
-    color: var(--fg);
-    background-color: var(--bg);
-}
-
-::selection {
-    color: var(--bg);
-    background-color: var(--fg);
-}
-
-h1 {
-    line-height: 1;
-}
-
-a {
-    color: var(--fg);
-    background-color: var(--bg);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
